--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hashgraph/sdk": "git://github.com/hashgraph/hedera-sdk-js.git#master",
+    "@hashgraph/sdk": "^1.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "open": "^7.0.0",
